--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -196,6 +196,11 @@
                       <span>口碑信息配置</span>
                     </a>
                 </li>
+                <li>
+                    <a [routerLink]="['maintain']">
+                        <span>信息获取</span>
+                      </a>
+                  </li>
               </ul>
             </li>
             <!-- <li>
