--- a/src/app/home/home/register/register.component.html
+++ b/src/app/home/home/register/register.component.html
@@ -16,7 +16,7 @@
             <input placeholder="昵称" name="avatorName" class="form-control no-border" [(ngModel)]="avatorName"  required>
           </div>
           <div class="list-group-item">
-            <input type="email" name="username" placeholder="邮箱地址或手机号码" class="form-control no-border" [(ngModel)]="username" required>
+            <input  name="username" placeholder="手机号码" class="form-control no-border" [(ngModel)]="username" required>
           </div>
           <div class="list-group-item">
             <input type="password" name="password" placeholder="密码" class="form-control no-border" [(ngModel)]="password" required>
