--- a/src/app/home/home/content/content.component.html
+++ b/src/app/home/home/content/content.component.html
@@ -55,8 +55,11 @@
               </div>
               <div class="line line-dashed b-b line-lg pull-in"></div>
               <div class="col-lg-12 col-md-12 col-sm-12">
-                <div [innerHTML]="forum.contentSafe">
-                </div>
+                  <video *ngIf="isOnlyVideo" id="my-video" class="video-js col-md-12" controls preload="auto" style="height:480px" 
+                  poster="{{forum.images[0]}}" data-setup="{}">
+                    <source src="{{forum.videos[0]}}" type='video/mp4'>
+                  </video>
+                <div *ngIf="!isOnlyVideo" [innerHTML]="forum.contentSafe"></div>
               </div>
               <!--论坛内容的位子  -->
               <!--论坛回复的位子  -->
