--- a/src/app/home/home/forget/forget.component.html
+++ b/src/app/home/home/forget/forget.component.html
@@ -3,13 +3,13 @@
     <a href class="navbar-brand block m-t">异曲汇</a>
     <div class="m-b-lg">
       <div class="wrapper text-center">
-        <strong>请输入注册时填写的邮件地址或手机号码</strong>
+        <strong>请输入注册时填写的手机号码</strong>
       </div>
 
       <form name="reset" ng-init="isCollapsed=true" #F="ngForm" (ngSubmit)="send()" >
         <div class="list-group list-group-sm">
           <div class="list-group-item">
-            <input type="email" name="username" placeholder="请输入邮件地址或手机号码" [(ngModel)]="username" class="form-control no-border" required>
+            <input  name="username" placeholder="请输入手机号码" [(ngModel)]="username" class="form-control no-border" required>
           </div>
         </div>
         <button type="submit" ng-disabled="reset.$invalid" class="btn btn-lg btn-primary btn-block" ng-click="isCollapsed = !isCollapsed">发送</button>
