--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -12,8 +12,9 @@
         </button>
       <!-- brand -->
       <a routerLink="/home" class="navbar-brand text-lt">
-          <i class="fa fa-btc"></i>
-          <img src="./public/img/logo.png" alt="." class="hide">
+        
+          <i class="fa"><img style="width:25px" src="./public/img/logo.png" alt="." class="show"></i>
+          
           <span class="hidden-folded m-l-xs">异曲汇</span>
         </a>
       <!-- / brand -->
@@ -395,7 +396,7 @@
                   <span class="font-bold">直播</span>
                 </a>
             </li>
-            <!-- 
+            
             <li class="line dk"></li>
             <li class="hidden-folded padder m-t m-b-sm text-muted text-xs" style="font-size:15px">
               <span><b>曲谱</b></span>
@@ -404,10 +405,11 @@
               <a routerLink="/home/home/score" [ngClass]="{auto:true}">
                  <b class="badge bg-info pull-right">9</b>
                  <i><img style="width:25px" src="./public/img/FindScore.png"></i>
-                 <i class="glyphicon  glyphicon-search icon text-info-lter" style="font-size: 25px"></i>
+                 
                   <span class="font-bold">曲谱</span>
                 </a>
             </li>
+            <!-- 
             <li class="line dk"></li>
             <li class="hidden-folded padder m-t m-b-sm text-muted text-xs" style="font-size:15px">
               <span><b>发现乐器</b></span>
@@ -569,7 +571,7 @@
             </div> -->
             <div class="list-group list-group-sm">
               <div class="list-group-item">
-                <input type="email" name="username" placeholder="邮箱地址或手机号码" class="form-control no-border" [(ngModel)]="loginusername" required>
+                <input  name="username" placeholder="手机号码" class="form-control no-border" [(ngModel)]="loginusername" required>
               </div>
               <div class="list-group-item">
                 <input type="password" name="password" placeholder="密码" class="form-control no-border" [(ngModel)]="password" required>
@@ -656,13 +658,13 @@
       <div class="modal-body">
         <div class="m-b-lg">
           <div class="wrapper text-center">
-            <strong>请输入注册时填写的邮件地址或手机号码</strong>
+            <strong>请输入注册时填写的手机号码</strong>
           </div>
     
           <form name="reset" ng-init="isCollapsed=true" #F="ngForm" (ngSubmit)="send()" >
             <div class="list-group list-group-sm">
               <div class="list-group-item">
-                <input type="email" name="username" placeholder="请输入邮件地址或手机号码" [(ngModel)]="loginusername" class="form-control no-border" required>
+                <input   name="username" placeholder="请输入手机号码" [(ngModel)]="loginusername" class="form-control no-border" required>
               </div>
             </div>
             <button type="submit" class="btn btn-lg btn-primary btn-block" >发送</button>
