--- a/src/app/home/home/login/login.component.html
+++ b/src/app/home/home/login/login.component.html
@@ -5,7 +5,7 @@
     <a href class="navbar-brand block m-t">异曲汇</a>
     <div class="m-b-lg">
       <div class="wrapper text-center">
-        <strong>通过手机和邮箱登录</strong>
+        <strong>通过手机号登录</strong>
       </div>
       <form name="form" #f="ngForm" (ngSubmit)="login()">
         <div class="text-danger wrapper text-center" ng-show="authError">
@@ -13,7 +13,7 @@
         </div>
         <div class="list-group list-group-sm">
           <div class="list-group-item">
-            <input type="email" name="username" placeholder="邮箱地址或手机号码" class="form-control no-border" [(ngModel)]="username" required>
+            <input  name="username" placeholder="手机号码" class="form-control no-border" [(ngModel)]="username" required>
           </div>
           <div class="list-group-item">
             <input type="password" name="password" placeholder="密码" class="form-control no-border" [(ngModel)]="password" required>
