--- a/src/app/home/home/score/scores/scores.component.html
+++ b/src/app/home/home/score/scores/scores.component.html
@@ -1,131 +1,148 @@
 <!-- content -->
 <div id="content" class="app-content" role="main">
-    <ol class="breadcrumb">
-        <li><a routerLink="/home">首页</a></li>
-        <li class="active">曲谱</li>
-      </ol>
+  <ol class="breadcrumb">
+    <li><a routerLink="/home">首页</a></li>
+    <li class="active">曲谱</li>
+  </ol>
   <div class="app-content-body ">
+    <div class="wrapper-sm">
+      <div class="row">
 
-    <div class="row">
-      <div class="col-lg-8 col-md-12 col-sm-12 wrapper bg-white b-b">
-        <div class="hbox hbox-auto-xs hbox-auto-sm">
-          <div class="col w-md bg-light dk b-r bg-auto">
-            <div class="wrapper b-b bg">
-              <button class="btn btn-sm btn-default pull-right visible-sm visible-xs" ui-toggle="show" target="#email-menu"><i class="fa fa-bars"></i></button>
-              <a routerLink="/home/home/score/scoreissue" class="btn btn-sm btn-danger w-xs font-bold">+发布曲谱</a>
-            </div>
-            <div class="wrapper hidden-sm hidden-xs" id="email-menu">
-              <ul class="nav nav-pills nav-stacked nav-sm">
-                <li class="active"><a >钢琴谱</a></li>
-                <li><a >小提琴谱</a></li>
-                <li><a >萨克斯谱</a></li>
-                <li><a >大提琴谱</a></li>
-                <li><a >架子鼓谱</a></li>
-                <!-- <li><a></a></li> -->
-              </ul>
-              <div class="wrapper">Labels</div>
-              <ul class="nav nav-pills nav-stacked nav-sm">
-                <li>
-                  <a><i class="fa fa-fw fa-circle text-info"></i>Angular</a>
-                </li>
-                <li>
-                  <a><i class="fa fa-fw fa-circle text-primary"></i>Bootstrap</a>
-                </li>
-                <li>
-                  <a><i class="fa fa-fw fa-circle text-success"></i>Work</a>
-                </li>
-                <li>
-                  <a><i class="fa fa-fw fa-circle text-muted"></i>Client</a>
-                </li>
-              </ul>
-              <div class="wrapper">收藏</div>
-              <ul class="nav nav-pills nav-stacked nav-sm">
-                <li><a>我的曲谱</a></li>
-              </ul>
-              <div class="wrapper">
-                <form name="label">
-                  <div class="input-group">
-                    <input type="text" class="form-control input-sm" placeholder="New label">
+        <!--曲谱  -->
+        <div class="col-lg-8 col-md-8 col-sm-12">
+          <!-- 曲谱分类-->
+          <div class="col-lg-12 col-md-12 col-sm-12" style="padding:0">
+            <div class="panel panel-default">
+              <div class="app-content-body " style="padding:0">
+                <!-- <form class="form-horizontal" method="get"> -->
+                <div class="wrapper-md" style="background:#fff;padding:10px;height:100px">
+                  <div class="input-group col-md-10 pull-right">
+                    <input type="text" style="height:35px" (change)="changeListener($event)" (keyup.enter)="keypress($event)" name="scoresearch"
+                      [(ngModel)]="searchString" class="form-control input-sm bg-light no-border rounded padder" placeholder="查询曲谱...">
                     <span class="input-group-btn">
-	              <button class="btn btn-sm btn-default" type="button">Add</button>
-	            </span>
+                                  <button (click)="search()" style="height:35px" class="btn btn-sm bg-light rounded"><i class="fa fa-search"></i></button>
+                              </span>
                   </div>
-                </form>
-              </div>
-            </div>
-          </div>
-          <div class="col">
+                  <div class="line line-dashed b-b line-lg pull-in"></div>
+                  <div class="form-group">
+                    <label class="col-sm-2 control-label">过滤</label>
+                    <div class="col-sm-10">
 
-            <div>
-              <!-- header -->
-              <div class="wrapper bg-light lter b-b">
-                <!-- <div class="btn-group pull-right">
-	          <button type="button" class="btn btn-sm btn-bg btn-default"><i class="fa fa-chevron-left"></i></button>
-	          <button type="button" class="btn btn-sm btn-bg btn-default"><i class="fa fa-chevron-right"></i></button>
-	        </div> -->
-                <div class="btn-toolbar">
-                  <div class="btn-group dropdown">
-                    <button class="btn btn-default btn-md btn-bg dropdown-toggle" data-toggle="dropdown">
-	              <span class="dropdown-label">Filter</span>                    
-	              <span class="caret"></span>
-	            </button>
-                    <ul class="dropdown-menu text-left text-sm">
-                      <li><a ui-sref="app.mail.list({fold:'unread'})">Unread</a></li>
-                      <li><a ui-sref="app.mail.list({fold:'starred'})">Starred</a></li>
-                    </ul>
+                      <label class="checkbox-inline i-checks">
+                              <input type="radio" name="lvl" value="难" [(ngModel)]="lvl"  (change)="changeSelListener($event)" ><i></i> 难
+                            </label>
+                      <label class="checkbox-inline i-checks">
+                              <input type="radio" name="lvl" value="标准" [(ngModel)]="lvl" (change)="changeSelListener($event)"><i></i> 标准
+                            </label>
+                      <label class="checkbox-inline i-checks">
+                              <input type="radio" name="lvl" value="入门" [(ngModel)]="lvl" (change)="changeSelListener($event)"><i></i> 入门
+                            </label>
+                            &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
+                      <label class="checkbox-inline i-checks">
+                              <input type="radio" name="region" value="国外" [(ngModel)]="region" (change)="changeSelListener($event)"><i></i> 国外名曲
+                            </label>
+                      <label class="checkbox-inline i-checks">
+                              <input type="radio" name="region" value="国内" [(ngModel)]="region" (change)="changeSelListener($event)"><i></i> 国内名曲
+                            </label>
+                            &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
+                      <label class="checkbox-inline i-checks">
+                                <input type="radio" name="style" value="古典" [(ngModel)]="style" (change)="changeSelListener($event)"><i></i> 古典
+                              </label>
+                      <label class="checkbox-inline i-checks">
+                                <input type="radio" name="style" value="现代" [(ngModel)]="style" (change)="changeSelListener($event)"><i></i> 现代
+                              </label>
+                              &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
+                      <button class="btn btn-success btn-sm rounded" (click)="clearSel()">清空</button>
+                    </div>
                   </div>
-                  <div class="btn-group">
-                    <button class="btn btn-md btn-bg btn-default" data-toggle="tooltip" data-placement="bottom" data-title="Refresh" data-original-title=""
-                      title=""><i class="fa fa-refresh"></i></button>
+                </div>
+                <!-- </form> -->
+                <div class="wrapper-xs">
+                  <div class="tab-container">
+                    <ul class="nav nav-tabs" id="scoreTab">
+                      <li (click)="changeTab(i)" [ngClass]="{active: i == 0}" *ngFor="let instrument of instruments;let i = index"><a href data-toggle="tab" data-target="#tab_{{i}}"> <i><img style="width:20px" src="./public/img/{{instrumenticons[i]}}.png"></i> {{instrument}} </a></li>
+                      <li style="float:right">
+                        <button class="btn btn-info btn-block" routerLink="/home/home/score/scoreissue">+发布曲谱</button>
+                      </li>
+                    </ul>
+                    <div class="tab-content">
+                      <div [ngClass]="{active:(i==0)}" class="tab-pane" id="tab_{{i}}" *ngFor="let instrument of instruments; let i = index">
+                        <div class="figure flex-block" *ngFor="let score of scoreslist">
+                          <div class="article flex-1">
+                            <h2 class="figcaption"><a routerLink="/home/home/score/scoreplay/{{score._id}}" title="{{score.title}}"> {{score.title}}</a></h2>
+                            <br>
+                            <div class="subtitle"><span>{{score.avator}}</span>
+                              <span>   {{score.fromTime}}</span>
+                              <span>   {{score.support}}赞</span>
+                              <span>   {{score.read}}查看</span>
+                              <span *ngIf="score.mp3 != undefined" class="label bg-light m-l-sm ">mp3</span>
+                            </div>
+                          </div>
+                          <div class="figure_loading" *ngIf="isloading">正在为你加载更多...</div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
-              <!-- / header -->
-
-              <!-- list -->
-              <ul class="list-group list-group-lg no-radius m-b-none m-t-n-xxs">
-                <li class="list-group-item clearfix b-l-3x b-l-info" *ngFor="let score of scoreslist">
-                  <!-- <a class="avatar thumb pull-left m-r" href="#/app/page/profile">
-	            <img ng-src="img/a10.jpg" src="img/a10.jpg">
-	          </a> -->
-                  <div class="pull-right text-sm text-muted">
-                    <span class="hidden-xs ">{{score.fromTime}}</span>
-                    <i class="fa fa-paperclip m-l-sm"></i>
-                  </div>
-                  <div class="clear">
-                    <div><a routerLink="/home/home/score/scoreplay/{{score._id}}" class="h3">{{score.title}}</a><span class="label bg-light m-l-sm ">{{score.mp3!=undefined?"mp3":"曲谱"}}</span></div>
-                    <div class="text-ellipsis m-t-xs ">
-                        
-                      {{score.avator}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                      {{score.difficult}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                      {{score.support}}赞 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                      {{score.read}}查看
-                    </div>
-                  </div>
-                </li>
-                
-              </ul>
-              <!-- / list -->
+            </div>
+          </div>
+          <!--找琴的位子  -->
+        </div>
+        <!--广告位信息  -->
+        <div class="col-lg-4 col-md-4 col-sm-12" *ngIf="adslist.length>0">
+          <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+              <li data-target="#carousel-example-generic" [ngClass]="{'active': i==0}" *ngFor="let ads of adslist;let i = index"></li>
+            </ol>
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+              <div class="item " [ngClass]="{'active': i==0}" *ngFor="let ads of adslist;let i = index">
+                <a (click)="adsClick(ads)"><img src="{{ads.path}}"  alt="{{ads.subtitle}}"></a>
+                <div class="carousel-caption">
+                  <h3>{{ads.title}}</h3>
+                  <p>{{ads.subtitle}}</p>
+                </div>
+              </div>
             </div>
 
+            <!-- Controls -->
+            <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                  <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                  <span class="sr-only">上一页</span>
+                </a>
+            <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                  <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                  <span class="sr-only">下一页</span>
+                </a>
+          </div>
+        </div>
+        <!--广告位信息  -->
+        <div class="col-lg-4 col-md-8 col-sm-12">
+          <div class="panel panel-default">
+            <div class="panel-heading font-bold">最热的曲谱</div>
+            <div class="panel-body">
+              <div class="padder-md">
+                <div class="figure flex-block" *ngFor="let hotSocre of hotscorelist">
+                  <div class="article flex-1">
+                    <h2 class="figcaption"><a routerLink="../../content/{{hotSocre._id}}" title="{{hotSocre.title}}"> {{hotSocre.title}}</a></h2>
+                    <br>
+                    <div class="subtitle"><span>{{hotSocre.avator}}</span>
+                      <span>   {{hotSocre.fromTime}}</span>
+                      <span>   {{hotSocre.support}}赞</span>
+                      <span>   {{hotSocre.read}}查看</span>
+
+                    </div>
+                  </div>
+
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-      <!--广告位信息  -->
-      <div class="col-lg-4 col-md-12 col-sm-12 wrapper bg-white b-b" style="padding:10px">
-          <div class="channel">
-            <h4 class="channel_title">相关阅读</h4>
-            <div class="channel_list">
-              <ul class="channel_list_show" *ngFor="let for of forumList">
-                <li><a routerLink="/home/home/content/{{for._id}}" title="{{for.title}}">{{for.title}}</a>
-                  <div class="channel_subtitle"><span>{{for.avator}}</span><span>{{for.fromTime}}</span></div>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
     </div>
-
   </div>
 </div>
 <!-- /content -->
